--- a/src/styles/pages/create-orphanage.css
+++ b/src/styles/pages/create-orphanage.css
@@ -7,6 +7,7 @@
   flex: 1;
 }
 
+
 form.create-orphanage-form {
   width: 700px;
   margin: 64px auto;
@@ -18,6 +19,12 @@ form.create-orphanage-form {
   padding: 64px 80px;
 
   overflow: hidden;
+}
+
+form.create-orphanage-form .leaflet-container {
+  margin-bottom: 40px;
+  border: 1px solid #d3e2e5;
+  border-radius: 20px;
 }
 
 form.create-orphanage-form fieldset {
@@ -82,13 +89,34 @@ form.create-orphanage-form .input-block textarea {
   line-height: 28px;
 }
 
-form.create-orphanage-form .input-block .new-image {
+form.create-orphanage-form .input-block .images-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 16px;
+}
+
+form.create-orphanage-form .input-block .images-container img {
   width: 100%;
-  height: 64px;
+  height: 96px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+form.create-orphanage-form .input-block .images-container .new-image {
+  height: 96px;
   background: #F5F8FA;
   border: 1px dashed #96D2F0;
   border-radius: 20px;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+form.create-orphanage-form .input-block input[type=file] {
+  display: none;
 }
 
 form.create-orphanage-form .input-block .button-select {
@@ -145,3 +173,5 @@ form.create-orphanage-form button.confirm-button svg {
 form.create-orphanage-form button.confirm-button:hover {
   background: #36CF82;
 }
+
+/* TODO - CRIAR BOTÃO PARA EXCLUIR AS IMAGENS DO CADASTRO */
